newtype-tools/tests/newtype-fail/newtype-name-value.rs
#[derive(newtype_tools::Newtype)]
#[newtype = value]
struct Oranges(u32);

fn main() {}
